--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "decorator-debounce",
   "version": "1.0.0",
   "description": "Decorator for debounce class methods",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha ./test/*.test.js --compilers js:babel-core/register",
